v0.07.3
* Added motion blur syntax for instances and objects in .sc files
* Added shutter parameter to camera to allow motion blur of scene objects even when the camera is static
* Camera and Instances are now controlled by moving matrices and may be motion blurred
* Added MovingMatrix4 class
* Removed eye/target/up syntax for describing camera transform (parameters only - not .sc syntax)
* Added total rays to statistics output
* Fixed filtering in y direction for BucketRenderer
* Fixes to QMC sigma table - no longer requires precomputation
* Implemented low sampling density for ImageBasedLight in fixed mode
* Added PerlinModifier
* Bug fix to writeVerbatimString() in binary scene writer
* Added sampler choice to image block in .sc parser
* Small bugfix to command line sampler choice
* Moved shading cache into new image sampler
* Added a new image sampler (MultipassRenderer - not multipass yet)
* Added statistics to count number of rays cast
* Removed "robust" intersection code for triangles and bezier patches
* Added sphereflake primitive
* Moved Nan/Inf check into LightServer, demoted to warning severity
* Fix to allow LDR images in IBL
* File browser in SunflowGUI remembers previous directory
* Modified Matrix4 class to only accept affine transformations
* Added cylinder primitive
* Removed getUniqueName method from SunflowAPI
* Fixed more potential locale issues with case conversion by forcing the ENGLISH locale to be used
* Renamed get/setCurrentFrame to currentFrame in SunflowAPI
* Renamed parse to include in SunflowAPI
* Added reset keyword to new scene file format
* Fixed access levels on certain classes in org.sunflow package
* Fixed spelling of absorption in glass shader - left backwards compatibility in SCParser
* Added reading/writing of Indigo's IGI file format
* Added GenericBitmap format for simple debugging tasks
* Added more robust file extension detection
* Refactored Bitmap loading/saving with plugin system