@@ -1,7 +1,9 @@
 package org.sunflow.image.writers;
 
+import java.io.BufferedOutputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.OutputStream;
 
 import org.sunflow.image.BitmapWriter;
 import org.sunflow.image.Color;
@@ -33,7 +35,7 @@ public class HDRBitmapWriter implements BitmapWriter {
     }
 
     public void closeFile() throws IOException {
-        FileOutputStream f = new FileOutputStream(filename);
+        OutputStream f = new BufferedOutputStream(new FileOutputStream(filename));
         f.write("#?RGBE\n".getBytes());
         f.write("FORMAT=32-bit_rle_rgbe\n\n".getBytes());
         f.write(("-Y " + height + " +X " + width + "\n").getBytes());
